[tool.poetry]
name = "grpc-accesslog"
version = "0.1.0"
description = "gRPC Access Log"
authors = ["Michael Morgan <git@morgan83.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/villainy/grpc-accesslog"
repository = "https://github.com/villainy/grpc-accesslog"
documentation = "https://grpc-accesslog.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/villainy/grpc-accesslog/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
grpc-interceptor = "^0.13.0"
grpc-stubs = "^1.24.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.13.0"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.5.4"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.12.1"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.2"
Pygments = "^2.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["grpc_accesslog"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
